force-app/main/default/objects/Project_Task_Relationship__c/Project_Task_Relationship__c.object-meta.xml
<CustomObject>
    <label>Project Task Relationship</label>
    <nameField>
        <displayFormat>PTR-{0000}</displayFormat>
        <label>Task Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Task Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>