force-app/main/default/objects/Project_Task_Relationship__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <description>Type of relationship between the Task and Related Task. Defines whether the dependency is blocking or non-blocking.</description>
    <inlineHelpText>Select the type of relationship: Related = tasks are related but not dependent. Blocking Dependency = the Task cannot proceed until the Related Task is completed. Epic/Feature Parent = the Task is part of a larger epic or feature represented by the Related Task.</inlineHelpText>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Related</fullName>
            </value>
            <value>
                <fullName>Blocking Dependency</fullName>
            </value>
            <value>
                <fullName>Epic/Feature Parent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>