force-app/main/default/objects/Project_Task_Relationship__c/fields/Task_A__c.field-meta.xml
<CustomField>
    <fullName>Task_A__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The primary task in the relationship. This task depends on or is related to the Related Task.</description>
    <inlineHelpText>Select the primary task in this relationship. This task depends on or is related to the Related Task.</inlineHelpText>
    <label>Task</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Task A Relationships</relationshipLabel>
    <relationshipName>Task_A_Relationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>