force-app/main/default/objects/Project_Task_Relationship__c/fields/Task_B__c.field-meta.xml
<CustomField>
    <fullName>Task_B__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description
  >The related task in the relationship. The primary Task depends on or is related to this task.</description>
    <inlineHelpText
  >Select the related task in this relationship. The primary Task depends on or is related to this task.</inlineHelpText>
    <label>Related Task</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Task B Relationships</relationshipLabel>
    <relationshipName>Task_B_Relationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>