force-app/main/default/objects/Project_Task_Relationship__c/validationRules/Prevent_Self_Relationship.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Self_Relationship</fullName>
    <active>true</active>
    <description>Prevents a task from being related to itself.</description>
    <errorConditionFormula>Task_A__c = Task_B__c</errorConditionFormula>
    <errorDisplayField>Task_B__c</errorDisplayField>
    <errorMessage
  >Cannot create a relationship between a task and itself. Please select a different task.</errorMessage>
</ValidationRule>